--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -62,7 +62,6 @@ javadoc.windowtitle=
 javafx.application.implementation.version=1.0
 javafx.binarycss=false
 javafx.classpath.extension=\
-    ${java.home}/lib/jfxrt.jar:\
     ${java.home}/lib/javaws.jar:\
     ${java.home}/lib/deploy.jar:\
     ${java.home}/lib/plugin.jar
@@ -104,7 +103,7 @@ javafx.swing=true
 # Pre-JavaFX 2.0 WebStart is deactivated in JavaFX 2.0+ projects
 jnlp.enabled=false
 # Main class for Java launcher
-main.class=ywca_database.Login
+main.class=pkginterface.Login
 # For improved security specify narrower Codebase manifest attribute to prevent RIAs from being repurposed
 manifest.custom.codebase=*
 # Specify Permissions manifest attribute to override default (choices: sandbox, all-permissions)
